refactor(basic-3.3): set conciseness name for classes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <input type="checkbox">
         <label class="task-input">Pay Bills</label>
         <input type="text" class="task-input">
-        <button class="edit-button">Edit</button>
-        <button class="delete-button">
+        <button class="edit-btn">Edit</button>
+        <button class="delete-btn">
           <img src="./remove.svg">
         </button>
       </li>
@@ -32,8 +32,8 @@
         <input type="checkbox">
         <label class="task-input">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task-input">
-        <button class="edit-button">Save</button>
-        <button class="delete-button">
+        <button class="edit-btn">Save</button>
+        <button class="delete-btn">
           <img src="./remove.svg">
         </button>
       </li>
@@ -44,8 +44,8 @@
         <input type="checkbox" checked>
         <label class="task-input">See the Doctor</label>
         <input type="text" class="task-input">
-        <button class="edit-button">Edit</button>
-        <button class="delete-button">
+        <button class="edit-btn">Edit</button>
+        <button class="delete-btn">
           <img src="./remove.svg">
         </button>
       </li>
