--- a/index.html
+++ b/index.html
@@ -5,52 +5,56 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="info-block">
+  <header class="info-block">
     <img class="img" src="./eisenhower-matrix.jpg">
     <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="new-task-block">
+  </header>
+  <main class="main">
+    <section id="new-task-block">
       <label class="label" for="new-task">Add Item</label>
       <div class="new-task-wrapper">
         <input id="new-task"class="input task-input" type="text">
         <button class="btn">Add</button>
       </div>
-    </p>
-    <h3 class="title">Todo</h3>
-    <ul class="task-list" id="incomplete-tasks">
-      <li class="list-item">
-        <input class="input" type="checkbox">
-        <label class="label task-input">Pay Bills</label>
-        <input type="text" class="input task-input">
-        <button class="btn edit-btn">Edit</button>
-        <button class="btn delete-btn">
-          <img class="img" src="./remove.svg">
-        </button>
-      </li>
-      <li class="list-item edit-mode">
-        <input class="input" type="checkbox">
-        <label class="label task-input">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="input task-input">
-        <button class="btn edit-btn">Save</button>
-        <button class="btn delete-btn">
-          <img class="img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul class="task-list" id="completed-tasks">
-      <li class="list-item">
-        <input class="input" type="checkbox" checked>
-        <label class="lable task-input">See the Doctor</label>
-        <input type="text" class="input task-input">
-        <button class="btn edit-btn">Edit</button>
-        <button class="btn delete-btn">
-          <img class="img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
+    </section>
+    <section>
+      <h3 class="title">Todo</h3>
+      <ul class="task-list" id="incomplete-tasks">
+        <li class="list-item">
+          <input class="input" type="checkbox">
+          <label class="label task-input">Pay Bills</label>
+          <input type="text" class="input task-input">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn delete-btn">
+            <img class="img" src="./remove.svg">
+          </button>
+        </li>
+        <li class="list-item edit-mode">
+          <input class="input" type="checkbox">
+          <label class="label task-input">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input task-input">
+          <button class="btn edit-btn">Save</button>
+          <button class="btn delete-btn">
+            <img class="img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Completed</h3>
+      <ul class="task-list" id="completed-tasks">
+        <li class="list-item">
+          <input class="input" type="checkbox" checked>
+          <label class="lable task-input">See the Doctor</label>
+          <input type="text" class="input task-input">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn delete-btn">
+            <img class="img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
