--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="body">
   <header class="info-block">
-    <img class="img" src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -26,7 +26,7 @@
           <input type="text" class="input task-input">
           <button class="btn edit-btn">Edit</button>
           <button class="btn delete-btn">
-            <img class="img" src="./remove.svg">
+            <img class="img" src="./remove.svg" alt="Remove">
           </button>
         </li>
         <li class="list-item edit-mode">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="input task-input">
           <button class="btn edit-btn">Save</button>
           <button class="btn delete-btn">
-            <img class="img" src="./remove.svg">
+            <img class="img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
           <input type="text" class="input task-input">
           <button class="btn edit-btn">Edit</button>
           <button class="btn delete-btn">
-            <img class="img" src="./remove.svg">
+            <img class="img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
