--- a/index.html
+++ b/index.html
@@ -5,51 +5,51 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <header class="info-block">
-    <img class="img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section id="new-task-block">
-      <label class="label" for="new-task">Add Item</label>
-      <div class="new-task-wrapper">
-        <input id="new-task"class="input task-input" type="text">
-        <button class="btn">Add</button>
+    <section class="new-task">
+      <label class="new-task__label" for="new-task-input">Add Item</label>
+      <div class="new-task__wrapper">
+        <input id="new-task-input"class="new-task__input input" type="text">
+        <button class="new-task__btn btn">Add</button>
       </div>
     </section>
     <section>
       <h3 class="title">Todo</h3>
-      <ul class="task-list" id="incomplete-tasks">
-        <li class="list-item">
-          <input class="input" type="checkbox">
-          <label class="label task-input">Pay Bills</label>
-          <input type="text" class="input task-input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn delete-btn">
-            <img class="img" src="./remove.svg" alt="Remove">
+      <ul class="list" id="incomplete-tasks">
+        <li class="task list__item">
+          <input class="task__check input" type="checkbox">
+          <label class="task__label">Pay Bills</label>
+          <input type="text" class="task__input input">
+          <button class="task__btn btn btn_edit">Edit</button>
+          <button class="task__btn btn btn_delete">
+            <img class="btn__img" src="./remove.svg" alt="Remove">
           </button>
         </li>
-        <li class="list-item edit-mode">
-          <input class="input" type="checkbox">
-          <label class="label task-input">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input task-input">
-          <button class="btn edit-btn">Save</button>
-          <button class="btn delete-btn">
-            <img class="img" src="./remove.svg" alt="Remove">
+        <li class="task list__item task_edit">
+          <input class="task__check input" type="checkbox">
+          <label class="task__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__input input">
+          <button class="task__btn btn btn_edit">Save</button>
+          <button class="task__btn btn btn_delete">
+            <img class="btn__img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
     </section>
     <section>
-      <h3>Completed</h3>
-      <ul class="task-list" id="completed-tasks">
-        <li class="list-item">
-          <input class="input" type="checkbox" checked>
-          <label class="lable task-input">See the Doctor</label>
-          <input type="text" class="input task-input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn delete-btn">
-            <img class="img" src="./remove.svg" alt="Remove">
+      <h3 class="title">Completed</h3>
+      <ul class="list list_completed" id="completed-tasks">
+        <li class="task list__item">
+          <input class="task__check input" type="checkbox" checked>
+          <label class="task__label">See the Doctor</label>
+          <input type="text" class="task__input input">
+          <button class="task__btn btn btn_edit">Edit</button>
+          <button class="task__btn btn btn_delete">
+            <img class="btn__img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
